add makefile, pre-commit hooks, and clean nbs metadata

--- a/scripts/01-rgm-prediction-gender-ICLR.ipynb
+++ b/scripts/01-rgm-prediction-gender-ICLR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "f1c0f204-75c9-4c06-9e0c-f940737c639d",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "1ff1021a-b9bb-446c-a816-a0548942787b",
    "metadata": {},
    "outputs": [
@@ -47,12 +47,12 @@
        "        "
       ],
       "text/plain": [
-       "<rpy2.robjects.vectors.BoolVector object at 0x7f3e410d2ec0> [RTYPES.LGLSXP]\n",
+       "<rpy2.robjects.vectors.BoolVector object> [RTYPES.LGLSXP]\n",
        "R classes: ('logical',)\n",
        "[       1]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "7b45c2b7-12f6-4271-88a6-bcb2e71b46d8",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "1eb8d388-6844-415f-afe2-da537fb27545",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "5b7cbf21-db3f-4e44-b2c2-e1cd00aa301c",
    "metadata": {},
    "outputs": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "8c55953e-0802-4c66-a8fc-b34c4fd6afb2",
    "metadata": {},
    "outputs": [],
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "e8420064-b5b7-483d-9c4f-e843e3f34894",
    "metadata": {},
    "outputs": [
@@ -252,7 +252,7 @@
        "[8938 rows x 1 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "888d0cfa-749f-4a97-a166-846d5dab25a8",
    "metadata": {},
    "outputs": [
@@ -286,7 +286,7 @@
        "Name: Names, Length: 8938, dtype: object"
       ]
      },
-     "execution_count": 64,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "77075be9-4256-455f-a08e-a640288f7157",
    "metadata": {},
    "outputs": [
@@ -461,7 +461,7 @@
        "[2341 rows x 6 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "3fbcdf9e-9fa5-44b0-bf21-5631f5b2dfdb",
    "metadata": {},
    "outputs": [
@@ -629,7 +629,7 @@
        "[2341 rows x 6 columns]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "aba3c71a-b096-49a4-a700-75b43ad1043c",
    "metadata": {},
    "outputs": [],
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "1d263c9d-d213-4a10-ae03-759830752364",
    "metadata": {},
    "outputs": [],
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "289b064d-c9ca-45d9-aed4-93e8dc784318",
    "metadata": {},
    "outputs": [],
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "id": "3611e17a-ddc3-4cb6-b747-e38de666695b",
    "metadata": {},
    "outputs": [
@@ -680,7 +680,7 @@
        "(8938,)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "7244d914-dc71-4fb0-b581-1d677ce4ad92",
    "metadata": {},
    "outputs": [
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "id": "fa0e3afb-ee40-4545-ae29-fe39f2d61246",
    "metadata": {},
    "outputs": [
@@ -723,7 +723,7 @@
        "26.19154173193108"
       ]
      },
-     "execution_count": 81,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "id": "ea620e88-7de4-40a7-adc8-4ba702f34c5c",
    "metadata": {},
    "outputs": [
@@ -744,7 +744,7 @@
        "990000.0"
       ]
      },
-     "execution_count": 83,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -764,21 +764,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.5"
   }
  },
  "nbformat": 4,
