--- a/scripts/02-rgm-data-obtain-SciBERT-embeddings.ipynb
+++ b/scripts/02-rgm-data-obtain-SciBERT-embeddings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": null,
    "id": "a4170199-7901-42dd-b434-270b268fc8ee",
    "metadata": {},
    "outputs": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": null,
    "id": "8eb75c4d-f7cc-4e24-a9cc-d847c74babba",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": null,
    "id": "82cdefbf-dbd6-4c62-886f-bc0b0e06388e",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "5e62e742-881f-48bf-8941-bcac8a4cd2f3",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "92afb400-740a-4237-89b7-0a3111f5e5b9",
    "metadata": {},
    "outputs": [
@@ -387,7 +387,7 @@
        "[16536 rows x 12 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "243ccb73-5ccd-4317-886b-3dfd13eb666d",
    "metadata": {},
    "outputs": [],
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "5001b966-92b5-4a95-8c4a-d04c415accca",
    "metadata": {},
    "outputs": [
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "7527b216-bd7f-46ba-8718-4811c562f3ba",
    "metadata": {},
    "outputs": [],
@@ -491,16 +491,14 @@
    "attachments": {},
    "cell_type": "markdown",
    "id": "da8cbf54-4b4c-4172-82f0-b1a4e9191a71",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "# Obtain SciBERT embeddings"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": null,
    "id": "0d502b56-13bf-49f3-9e94-ed21b3b460c2",
    "metadata": {},
    "outputs": [],
@@ -511,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": null,
    "id": "9b12b486-6582-407a-b3d2-723bf20bc97b",
    "metadata": {},
    "outputs": [
@@ -533,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": null,
    "id": "5ed10a80-e70f-4652-9746-6b5fd46253b9",
    "metadata": {},
    "outputs": [
@@ -564,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": null,
    "id": "82ab9d7e-10ab-48da-abff-9b9852ab984e",
    "metadata": {},
    "outputs": [],
@@ -584,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "069015eb-d0da-4fb4-8512-513d2999d804",
    "metadata": {},
    "outputs": [
@@ -594,7 +592,7 @@
        "transformers.models.bert.tokenization_bert_fast.BertTokenizerFast"
       ]
      },
-     "execution_count": 12,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "6eea2eb9-c059-44dd-b4ca-54191a69903e",
    "metadata": {},
    "outputs": [
@@ -615,7 +613,7 @@
        "transformers.models.bert.modeling_bert.BertModel"
       ]
      },
-     "execution_count": 11,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": null,
    "id": "974f48ab-3964-406e-9e0c-f3c049885e89",
    "metadata": {},
    "outputs": [
@@ -650,7 +648,7 @@
        " '.']"
       ]
      },
-     "execution_count": 159,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "a3723fed-2020-41e1-a182-0b0d552778e6",
    "metadata": {},
    "outputs": [
@@ -691,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "585fb498-0e60-4adc-825b-6b6025d5928c",
    "metadata": {},
    "outputs": [
@@ -701,7 +699,7 @@
        "torch.Size([1, 6])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": null,
    "id": "e51b63e3",
    "metadata": {},
    "outputs": [],
@@ -736,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": null,
    "id": "248b3347-5db6-4f89-b772-6b6fc3634ffc",
    "metadata": {},
    "outputs": [],
@@ -755,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": null,
    "id": "294c9642-a562-459c-bf8d-d3012dc8a347",
    "metadata": {},
    "outputs": [],
@@ -768,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": null,
    "id": "79b48e9b-e5f7-44ec-b451-d7e718b4e511",
    "metadata": {},
    "outputs": [
@@ -794,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": null,
    "id": "4076c831-9f59-4a44-bb45-506a54c2f57a",
    "metadata": {},
    "outputs": [
@@ -811,7 +809,7 @@
        "['a', 'very', 'very', 'very', 'long', 'and', 'verb', '##ose', 'abstract', '.']"
       ]
      },
-     "execution_count": 163,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": null,
    "id": "63540ad2-69b6-400b-b4a3-4f29bc5f8956",
    "metadata": {},
    "outputs": [],
@@ -844,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": null,
    "id": "3004b166",
    "metadata": {},
    "outputs": [
@@ -854,7 +852,7 @@
        "transformers.modeling_outputs.BaseModelOutputWithPoolingAndCrossAttentions"
       ]
      },
-     "execution_count": 179,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -865,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": null,
    "id": "bc0e5c11",
    "metadata": {},
    "outputs": [],
@@ -875,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": null,
    "id": "4bbe859b",
    "metadata": {},
    "outputs": [
@@ -885,7 +883,7 @@
        "torch.Size([2, 768])"
       ]
      },
-     "execution_count": 175,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -906,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "cb39651c-2b78-4152-afc3-6391dfe53130",
    "metadata": {},
    "outputs": [],
@@ -922,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "7ee274b4-2ea9-470c-9005-cdb1b36ef683",
    "metadata": {},
    "outputs": [
@@ -932,7 +930,7 @@
        "torch.Size([2, 12])"
       ]
      },
-     "execution_count": 58,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -943,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "ff5f9364-6d7e-49c5-b2a6-cdb295b92b7d",
    "metadata": {},
    "outputs": [
@@ -953,7 +951,7 @@
        "torch.Size([2, 12, 768])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -964,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "c6ebfd01-09be-4197-9999-a87ce3550407",
    "metadata": {},
    "outputs": [
@@ -974,7 +972,7 @@
        "tensor([1., 1., 1., 1., 1., 1., 0., 0., 0., 0., 0., 0.], device='cuda:0')"
       ]
      },
-     "execution_count": 51,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -985,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "704f2c59-d88e-42dd-b582-f98d53c0faa1",
    "metadata": {},
    "outputs": [
@@ -995,7 +993,7 @@
        "torch.Size([2, 12, 768])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1006,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "ed4afeba-a745-4401-80bd-22b04aa20feb",
    "metadata": {},
    "outputs": [
@@ -1016,7 +1014,7 @@
        "torch.Size([12, 768])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1027,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "98c3670a-f8bc-44b5-9ad8-d9605794c399",
    "metadata": {},
    "outputs": [
@@ -1049,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "3dd79a50-c2d5-44f6-a177-60c48f3b27b1",
    "metadata": {},
    "outputs": [
@@ -1105,11 +1103,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "891eb700-1850-406b-be33-125a3ff79a70",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1167,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "0c3b600a-7e75-4e51-ab90-3dd1d0aa33ff",
    "metadata": {},
    "outputs": [],
@@ -1187,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "e7aba0b7-2965-45c5-bb61-bb3944bf61e0",
    "metadata": {},
    "outputs": [
@@ -1274,11 +1270,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "fd540655-a610-489f-88ff-75c69f43d435",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1286,7 +1280,7 @@
        "12.403848"
       ]
      },
-     "execution_count": 22,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1306,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "9f6c093b-9596-4ec4-88ef-5a47b7cf3277",
    "metadata": {},
    "outputs": [],
@@ -1316,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "6a485c6a-5599-4880-b2a2-5a789850ebb6",
    "metadata": {},
    "outputs": [
@@ -1334,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "47470e38-bed1-4872-9769-696816fc6fc8",
    "metadata": {},
    "outputs": [],
@@ -1345,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "c533c1de-8318-457d-9eaf-3d5c08699eb6",
    "metadata": {},
    "outputs": [
@@ -1367,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "73777d3d-7019-4eba-9f22-26e84d5715fc",
    "metadata": {},
    "outputs": [
@@ -1407,11 +1401,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "00542ba0-b291-461d-b320-5ceb82688ab2",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -1490,7 +1482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "e4cccdb8-0e60-4fa5-bd49-d633d0ea31d1",
    "metadata": {},
    "outputs": [
@@ -1579,16 +1571,14 @@
    "attachments": {},
    "cell_type": "markdown",
    "id": "36d5aad8-860f-48d1-9fc9-e6da885d5d64",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "# Obtain BERT embeddings (Update code)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "7c0c59d9-41b9-435c-957a-709fdd4cfcc1",
    "metadata": {},
    "outputs": [],
@@ -1599,7 +1589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "adea4fb1-b9fe-4c86-bb40-ab8d67003d17",
    "metadata": {},
    "outputs": [
@@ -1621,7 +1611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "2011f272-62c2-41e0-97c2-f86c1781719a",
    "metadata": {},
    "outputs": [
@@ -1661,11 +1651,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "82554c7a-9217-4f52-963c-e02d4663271a",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -1731,7 +1719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "e6053bc0-6877-4994-9ae1-a32e36216e79",
    "metadata": {},
    "outputs": [],
@@ -1751,7 +1739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "4e9465e5-d65d-4632-858b-800a9ef060a6",
    "metadata": {},
    "outputs": [
@@ -1838,7 +1826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "d7b2ffcc-f32e-48f7-9dbb-4fbbe64d3eb5",
    "metadata": {},
    "outputs": [
@@ -1848,7 +1836,7 @@
        "6.90858"
       ]
      },
-     "execution_count": 19,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1868,21 +1856,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.10"
   }
  },
  "nbformat": 4,
