--- a/scripts/06-rgm-data-exploration.ipynb
+++ b/scripts/06-rgm-data-exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
        "'1.8.1+cu111'"
       ]
      },
-     "execution_count": 119,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
        "[16536 rows x 12 columns]"
       ]
      },
-     "execution_count": 125,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -490,17 +490,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "## Labels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -572,9 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "# Reproducibility\n",
     "Are the batches always the same if I fix the random seed?"
@@ -589,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -877,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1025,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1068,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1091,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1134,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1150,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1161,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1172,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1207,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1221,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1244,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1257,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1292,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1334,7 +1329,7 @@
        "          0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0])))"
       ]
      },
-     "execution_count": 291,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1351,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1360,7 +1355,7 @@
        "array([9923,  566])"
       ]
      },
-     "execution_count": 287,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1373,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1382,7 +1377,7 @@
        "array([5585, 6675])"
       ]
      },
-     "execution_count": 288,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1400,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1423,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1444,7 +1439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1487,7 +1482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1501,7 +1496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1514,7 +1509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1550,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1601,21 +1596,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.10"
   }
  },
  "nbformat": 4,
