--- a/scripts/pickle-panda-problem.ipynb
+++ b/scripts/pickle-panda-problem.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "41b72e3e-b319-4f3f-b70b-5e1fbb777836",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "'1.4.2'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "caff9f3c-2fa9-4e3f-ad06-6f974593a2ae",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "f2008f77-002e-41f4-bddd-19f770d9cb74",
    "metadata": {},
    "outputs": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "1143543c-7886-4cdc-a7ab-1ba8ae50f419",
    "metadata": {},
    "outputs": [
@@ -243,7 +243,7 @@
        "4 -25.827705 -37.891772  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "c964533b-0db3-469c-918f-f40d09c1b125",
    "metadata": {},
    "outputs": [
@@ -264,7 +264,7 @@
        "['theory', 'deep learning']"
       ]
      },
-     "execution_count": 28,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "b63e4707-04b7-457e-a2fc-ec771fe7d16a",
    "metadata": {},
    "outputs": [
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "0ad8054e-a4bc-4766-b681-839476bf4be9",
    "metadata": {},
    "outputs": [
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "e24ac5a7-8164-452d-aa0f-05d13183516d",
    "metadata": {},
    "outputs": [
@@ -494,7 +494,7 @@
        "4 -25.827705 -37.891772  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "0e8ee904-fd3c-4b89-8c05-1a6d5971c9cd",
    "metadata": {},
    "outputs": [
@@ -515,7 +515,7 @@
        "'theory'"
       ]
      },
-     "execution_count": 30,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "988076fc-0ef1-493c-954f-714d984693cc",
    "metadata": {},
    "outputs": [
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "d8c5a0e9-de93-4e20-96f1-af285051e397",
    "metadata": {},
    "outputs": [
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "b702811f-32e6-43cb-a9a0-fc4b8d8708d7",
    "metadata": {},
    "outputs": [
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "8d6bf84d-ddc5-4c25-b444-9562d38b8399",
    "metadata": {},
    "outputs": [
@@ -838,7 +838,7 @@
        "4 -25.827705 -37.891772  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "02b19fe8-e49d-4733-9695-67c3fed53b38",
    "metadata": {},
    "outputs": [
@@ -859,7 +859,7 @@
        "str"
       ]
      },
-     "execution_count": 26,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "2eaee5e7-2fa5-4b09-8cd5-f0f1e39afe8d",
    "metadata": {},
    "outputs": [
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "62019c9b-c53b-4cfd-a3b4-cbbfb841cbca",
    "metadata": {},
    "outputs": [
@@ -1067,7 +1067,7 @@
        "4 -33.260086  -4.038115  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1078,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "4aa2f670-45b3-42a5-9418-b145bb1e31d3",
    "metadata": {},
    "outputs": [
@@ -1103,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "2234c340-7ecf-4eaf-9899-1178fc28881e",
    "metadata": {},
    "outputs": [
@@ -1128,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "e7d05a97-cf09-4149-8c71-0960150d4d32",
    "metadata": {},
    "outputs": [
@@ -1138,7 +1138,7 @@
        "array([7, 6, 6])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1158,21 +1158,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.10"
   }
  },
  "nbformat": 4,
